# rapidai

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  QUICKSTART.md  README.md  index.html  pyproject.toml  setup.sh  sitemap.xml
.github/workflows/: docs.yml
about/: changelog.html  contributing.html  license.html  roadmap.html
about/changelog/: index.html
about/contributing/: index.html
about/license/: index.html
about/roadmap/: index.html
advanced/: background.html  caching.html  cli.html  configuration.html  middleware.html  monitoring.html  performance.html  prompts.html  rag.html  testing.html  ui.html
advanced/background/: index.html
advanced/caching/: index.html
advanced/cli/: index.html
advanced/configuration/: index.html
advanced/middleware/: index.html
advanced/monitoring/: index.html
advanced/performance/: index.html
advanced/prompts/: index.html
advanced/rag/: index.html
advanced/testing/: index.html
advanced/ui/: index.html
assets/js/: extra.js
deployment/: best-practices.html  cloud.html  docker.html  overview.html
deployment/best-practices/: index.html
deployment/cloud/: index.html
deployment/docker/: index.html
deployment/overview/: index.html
docsite/: README.md  build.sh  mkdocs.yml  requirements.txt
docsite/docs/: index.md
docsite/docs/about/: changelog.md  contributing.md  license.md  roadmap.md
docsite/docs/advanced/: background.md  caching.md  cli.md  configuration.md  middleware.md  monitoring.md  performance.md  prompts.md  rag.md  testing.md  ui.md
docsite/docs/deployment/: best-practices.md  cloud.md  docker.md  overview.md
docsite/docs/getting-started/: first-steps.md  installation.md  quickstart.md
examples/: README.md  background_jobs.py  cached_responses.py  chatbot.py  monitoring_dashboard.py  multi_provider.py  prompt_basic.py  prompt_decorator.py  rag_basic.py  rag_decorator.py  rag_multi_source.py  stateful_chatbot.py  testing_example.py  ui_chat_interface.py
getting-started/: first-steps.html  installation.html  quickstart.html
getting-started/first-steps/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
rapidai/: __init__.py  app.py  background.py  cache.py  config.py  exceptions.py  memory.py  monitoring.py  prompts.py  streaming.py  testing.py  types.py
rapidai/cli/: __init__.py  deploy.py  dev.py  new.py
rapidai/llm/: __init__.py  anthropic.py  base.py  openai.py
rapidai/middleware/: __init__.py  auth.py  cors.py  logging.py  rate_limit.py
rapidai/rag/: __init__.py  base.py  chunking.py  config.py  decorator.py  embeddings.py  loaders.py  mocks.py  retriever.py  vectordb.py
rapidai/ui/: __init__.py  chat.py  decorator.py
reference/: app.html  background.html  cache.html  cli.html  configuration.html  llm.html  memory.html  monitoring.html  prompts.html  rag.html  streaming.html  testing.html  types.html  ui.html
reference/app/: index.html
reference/background/: index.html
reference/cache/: index.html
reference/cli/: index.html
reference/configuration/: index.html
reference/llm/: index.html
reference/memory/: index.html
reference/monitoring/: index.html
reference/prompts/: index.html
reference/rag/: index.html
reference/streaming/: index.html
reference/testing/: index.html
reference/types/: index.html
reference/ui/: index.html
scripts/: publish.sh
search/: search_index.json
tests/: __init__.py  conftest.py  test_app.py  test_background.py  test_cache.py  test_llm.py  test_memory.py  test_monitoring.py  test_prompts.py  test_rag.py  test_streaming.py  test_testing.py  test_ui.py
tutorial/: caching.html  deployment.html  error-handling.html  intro.html  memory.html  multi-provider.html  simple-chatbot.html  streaming.html
tutorial/caching/: index.html
tutorial/deployment/: index.html
tutorial/error-handling/: index.html
tutorial/intro/: index.html
tutorial/memory/: index.html
tutorial/multi-provider/: index.html
tutorial/simple-chatbot/: index.html
tutorial/streaming/: index.html
(+25 files in other folders)
